--- a/checkout.html
+++ b/checkout.html
@@ -54,13 +54,10 @@
           </div>
 
           <div class="payment-summary-row subtotal-row">
-            <div>Total before tax:</div>
-            <div class="payment-summary-money">$47.74</div>
           </div>
 
-          <div class="payment-summary-row">
-            <div>Estimated tax (10%):</div>
-            <div class="payment-summary-money">$4.77</div>
+          <div class="payment-summary-row js-tax">
+            
           </div>
 
           <div class="payment-summary-row total-row">
