--- a/checkout.html
+++ b/checkout.html
@@ -48,7 +48,7 @@
             <div class="payment-summary-money">$42.75</div>
           </div>
 
-          <div class="payment-summary-row">
+          <div class="payment-summary-row js-shipping">
             <div>Shipping &amp; handling:</div>
             <div class="payment-summary-money">$4.99</div>
           </div>
