--- a/checkout.html
+++ b/checkout.html
@@ -44,8 +44,7 @@
             Order Summary
           </div>
 
-          <div class="payment-summary-row">
-            <div class="payment-summary-money">$42.75</div>
+          <div class="payment-summary-row js-total">
           </div>
 
           <div class="payment-summary-row js-shipping">
