started backend usage date update not working

--- a/amazon.html
+++ b/amazon.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/shared/general.css">
     <link rel="stylesheet" href="styles/shared/amazon-header.css">
     <link rel="stylesheet" href="styles/pages/amazon.css">
-  </head>l̥ō
+  </head>
   <body>
     <div class="amazon-header">
       <div class="amazon-header-left-section">
